src/objects/Code_Scan_Rule_Set__mdt.object
<CustomObject>
    <description>Code Scan Rule Set</description>
    <fields>
        <fullName>Rule_Description__c</fullName>
        <label>Rule Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Severity__c</fullName>
        <label>Severity</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <required>true</required>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Disabled</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <required>true</required>
        <type>Picklist</type>
    </fields>
    <label>Code Scan Rule Set</label>
    <pluralLabel>Code Scan Rule Sets</pluralLabel>
</CustomObject>